--- a/src/page.html
+++ b/src/page.html
@@ -24,7 +24,7 @@ function signIn(){
     scope: 'https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/contacts.readonly https://www.googleapis.com/auth/directory.readonly',
     ux_mode: 'popup',
     callback: (response) => {
-      fetch("./auth", {
+      fetch("./auth2", {
         method: "POST",
         body: JSON.stringify({code: response.code}),
         headers: {
