Uploading to lambda with dynamo...

--- a/src/page.html
+++ b/src/page.html
@@ -21,7 +21,8 @@
 function signIn(){
   const client = google.accounts.oauth2.initCodeClient({
     client_id: '672955273389-bc25j23ds73qgp7ukroaloutv2a22qjv.apps.googleusercontent.com',
-    scope: 'https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/contacts.readonly https://www.googleapis.com/auth/directory.readonly',
+    // scope: 'https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/contacts.readonly https://www.googleapis.com/auth/directory.readonly',
+    scope: 'https://www.googleapis.com/auth/userinfo.profile',
     ux_mode: 'popup',
     callback: (response) => {
       fetch("./auth", {
